<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context="com.gilvitzi.uavlogbookpro.activity.ActivityWhatsNew" >

	<LinearLayout
    	android:id="@+id/page1"
		android:orientation="vertical"
        android:layout_width="match_parent"
   		android:layout_height="match_parent"
		android:padding="20dp"
   		android:visibility="visible">

		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/title_new_in_version_2_3"
			android:textColor="#0FABFF"
			android:textSize="26sp" />

		<TextView
			android:id="@+id/blt1"
			style="@style/bullet"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:textSize="18sp"
			android:text="@string/feature_new_settings_menu" />

		<TextView
			android:id="@+id/blt2"
			style="@style/bullet"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:textSize="16sp"
			android:text="@string/feature_backup_and_restore" />

		<TextView
			android:id="@+id/important"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:textColor="@color/dark_red_style"
			android:textSize="18sp"
			android:text="@string/feature_important" />

		<TextView
			android:id="@+id/blt3"
			style="@style/bullet"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:textSize="16sp"
			android:text="@string/feature_import_excel_moved" />

    </LinearLayout>

	<Button
		android:id="@+id/whats_new_skip_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:background="@drawable/button_dark_red"
		android:onClick="goToNext"
		android:text="@string/whats_new_skip_button"
		android:textColor="@color/white" />
</RelativeLayout>


