<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        android:orderInCategory="29"
        app:showAsAction="ifRoom" >

    </item>
    -->
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        android:orderInCategory="30"
        app:showAsAction="ifRoom">

    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:orderInCategory="45"
        app:showAsAction="collapseActionView">

    </item>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="50"
        app:showAsAction="collapseActionView">

    </item>
</menu>
