<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gilvitzi.uavlogbookpro.activity.ActivityGoogleDriveSync" >


    <TextView
	        android:id="@+id/google_drive_feature_description"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/google_drive_feature_title"
	        android:layout_below="@+id/google_drive_feature_title"
	        android:layout_marginTop="23dp"
	        android:text="@string/description_sync_with_google_drive"
	        android:textColor="#000" />
	
	
	
		<LinearLayout
		    android:id="@+id/bullets_container"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/google_drive_feature_description"
		    android:layout_below="@+id/google_drive_feature_description"
		    android:orientation="vertical" >
	
		    <TextView
		        android:id="@+id/google_drive_sync_bullet_1"
		        style="@style/bullet"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/sync_with_google_drive_bullet1" />
	
		    <TextView
		        android:id="@+id/google_drive_sync_bullet_2"
		        style="@style/bullet"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/sync_with_google_drive_bullet2" />
	
		    <TextView
		        android:id="@+id/google_drive_sync_bullet_3"
		        style="@style/bullet"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/sync_with_google_drive_bullet3" />
	
		    <TextView
		        android:id="@+id/google_drive_sync_bullet_4"
		        style="@style/bullet"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/sync_with_google_drive_bullet4" />
		</LinearLayout>
	

		
    <!-- Google Drive Sync Switch (Changes between Version) -->

    <TextView
        android:id="@+id/google_drive_feature_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/title_sync_with_google_drive"
        android:textColor="#0FABFF"
        android:textSize="22sp" />

    <ToggleButton
        android:id="@+id/google_drive_sync_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bullets_container"
        android:layout_marginTop="49dp"
        android:layout_toRightOf="@+id/google_drive_feature_description"
        android:onClick="onToggleClicked" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/google_drive_sync_switch"
        android:layout_alignBottom="@+id/google_drive_sync_switch"
        android:layout_alignLeft="@+id/bullets_container"
        android:layout_marginLeft="25dp"
        android:text="@string/action_google_drive_sync"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/google_drive_sync_switch"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/google_drive_badge_desc"
        android:src="@drawable/drive_app_badge" />

</RelativeLayout>